# zeroize_mvp

./: .gitignore  CMakeLists.txt  README.md  c_cpp_properties.json  sonar-project.properties
.github/workflows/: build.yml
include/: Object.h  zeroize.h
results/: cmd_line
src/: Object.cpp  main.cpp  zeroize.c
tests/: test_zeroize.cpp  zeroize_test.cpp  zeroize_test.h
